--- a/sipsd-flowable-editor/.env.proxy
+++ b/sipsd-flowable-editor/.env.proxy
@@ -1,1 +1,3 @@
 NODE_ENV=proxy
+baseApi = 'http://192.168.126.25/sipsd-flow-modeler/'
+source = 'http://192.168.126.25/sipsd-flow-modeler/rest/model/loadXmlByModelId/12604728-d007-11eb-a546-5e2c421612f0'
