--- a/sipsd-flowable-editor/package.json
+++ b/sipsd-flowable-editor/package.json
@@ -6,13 +6,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build:106": "vue-cli-service build --mode development",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
     "@dpark/logfv-web-vue": "^1.0.26",
-    "@dpark/s2-utils": "^1.0.44",
-    "ant-design-vue": "^1.7.8",
     "axios": "^0.24.0",
     "bpmn-js": "^8.2.2",
     "downloadjs": "^1.4.7",
