--- a/sipsd-flowable-editor/.env.production
+++ b/sipsd-flowable-editor/.env.production
@@ -1,3 +1,3 @@
 NODE_ENV=production
-baseApi = 'http://58.210.9.133/iplatform/sipsd-flow-modeler/'
-source = 'http://58.210.9.133/iplatform/sipsd-flow-modeler/rest/model/loadXmlByModelId/12604728-d007-11eb-a546-5e2c421612f0'
+VUE_APP_baseApi = 'http://58.210.9.133/iplatform/sipsd-flow-modeler/'
+VUE_APP_source = 'http://58.210.9.133/iplatform/sipsd-flow-modeler/rest/model/loadXmlByModelId/12604728-d007-11eb-a546-5e2c421612f0'
