--- a/src/packages/bpmn-viewer-vue/.npmrc
+++ b/src/packages/bpmn-viewer-vue/.npmrc
@@ -1,5 +1,1 @@
-registry = "https://npm.dpark.com.cn/npm"
-@dpark:registry="https://npm.dpark.com.cn/npm"
-//npm.dpark.com.cn/:_authToken="6cDMkQtr484VQDQIIO8LYw=="
-//npm.dpark.com.cn/:always-auth=true
-//npm.dpark.com.cn/:email = xhgainxq@qq.com
+registry = "https://registry.npm.taobao.org"
